<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:layout_gravity="center_vertical"
    android:background="@color/yellow"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="369dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/app_transparent_logo_png">

    </ImageView>


    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_margin="20dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:hint="@string/enter_password"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_margin="20dp"
        android:text="@string/login"
        android:background="@color/dark_gray"
        android:layout_marginBottom="100dp"/>

</LinearLayout>