<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.contact.ContactFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingBottom="5dp"
                android:text="@string/my_contacts"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:id="@+id/link_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:padding="10dp"
                    android:layout_height="60dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/call_icon"/>
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/dark_gray"
                        android:text="@string/my_contact_number"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_gray"
                        android:text="Mobile"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:padding="10dp"
                    android:layout_height="60dp"
                    android:src="@drawable/email_icon"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/dark_gray"
                        android:text="@string/my_email_address"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_gray"
                        android:text="Email"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_linkedin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:padding="10dp"
                    android:layout_height="60dp"
                    android:src="@drawable/linkedin_round_icon"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/dark_gray"
                        android:text="@string/linkedin_profile"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_gray"
                        android:text="LinkedIn"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:padding="10dp"
                    android:layout_height="60dp"
                    android:src="@drawable/github_icon"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/dark_gray"
                        android:text="@string/github_profile"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_gray"
                        android:text="Github"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/link_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:padding="10dp"
                    android:layout_height="60dp"
                    android:src="@drawable/pdf_icon"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/dark_gray"
                        android:text="Resume"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/dark_gray"
                        android:text="resume.pdf"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>